automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2025,7 +2025,7 @@
     }
    ],
    "source": [
-    "pd.read_csv('Data/Zipcode_Demos.csv')"
+    "pd.read_csv('Data/Zipcode_Demos.csv', skiprows = )"
    ]
   },
   {
